--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -8,11 +8,55 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 class="text-center">Rapport quotidien</h1>
+                    {{ form_start(form) }}
 
+                        <div class="row">
+                            <div class="col-md-6">
+                                <h2>Rechercher un titre</h2>
+                                    <div id="custom-search-input">
+                                        <div class="input-group col-md-12">
 
-                
+                                            {{ form_widget(form.recherche, {'attr': {'class': 'form-control input-mg',
+                                                                                    'placeholder': 'Titre'
+                                                                                    }} ) }}
 
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-info btn-md" type="submit">
+                                                    <i class="glyphicon glyphicon-search"> Rechercher</i>
+                                                </button>
+                                            </span>
+                                        </div>
+                                    </div>
+                            </div>
+                        </div>
+                    {{ form_end(form)}}
             </div>
         </div>
+        <div class="row">
+
+            <div class="col-xs-12">
+
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th class="text-center">Titre</th>
+                            <th class="text-center">Description</th>
+                            <th class="text-center">Image</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for article in articles %}
+                            {# {{ dump(annonce)}} #}
+                            <tr>
+                                <td class="text-center"><a id="" class=" btn" href="/annonces/pageAnnonce/{{ article.title }}">{{ article.title }}</a></td>
+                                <td class="text-center">{{ article.description }}</td>
+                                <td class="text-center"><img class="img_cadre" src="{{ vich_uploader_asset(article, 'photoFile') }}" alt="photo_article"></td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
     </div>
 {% endblock %}
