mise en place de la recherche avec vue sur un article et mise en place d'un systeme de lecture de pdf et d'upload

--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -32,6 +32,9 @@
                     {{ form_end(form)}}
             </div>
         </div>
+
+        </br>
+
         <div class="row">
 
             <div class="col-xs-12">
@@ -46,7 +49,7 @@
                     </thead>
                     <tbody>
                         {% for article in articles %}
-                            {# {{ dump(annonce)}} #}
+                            {# {{ dump(article)}} #}
                             <tr>
                                 <td class="text-center"><a id="" class=" btn" href="/page_article/{{ article.title }}">{{ article.title }}</a></td>
                                 <td class="text-center">{{ article.description }}</td>
