--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -45,21 +45,66 @@
                             <th class="text-center">Titre</th>
                             <th class="text-center">Description</th>
                             <th class="text-center">Image</th>
+                            <th class="text-center">Fichier pdf</th>
                         </tr>
                     </thead>
                     <tbody>
+                    <style>
+                    </style>
                         {% for article in articles %}
                             {# {{ dump(article)}} #}
                             <tr>
                                 <td class="text-center"><a id="" class=" btn" href="/page_article/{{ article.title }}">{{ article.title }}</a></td>
                                 <td class="text-center">{{ article.description }}</td>
-                                <td class="text-center"><img class="img_cadre" src="{{ vich_uploader_asset(article, 'photoFile') }}" alt="photo_article"></td>
+
+                                {% if article.photo is null %}
+
+                                    <td class="text-center">Aucune photos</td>
+                                
+                                {% else %}
+                                    
+                                    <td class="text-center"><img class="img_cadre" src="{{ vich_uploader_asset(article, 'photoFile') }}" alt="photo_article"></td>
+
+                                {% endif %}
+
+
+                                {% if article.articlepdf is null %}
+
+                                    <td class="text-center">Aucun fichier PDF</td>
+                                
+                                {% else %}
+                                    
+                                    <td class="text-center">
+                                    <!-- Trigger the modal with a button -->
+                                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Fichier Pdf</button>
+                                    <!-- Modal -->
+                                    <div id="myModal" class="modal fade" role="dialog">
+                                        <div class="modal-dialog">
+                                            <!-- Modal content-->
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                        <h4 class="modal-title">Fichier Pdf</h4>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        <div><object data="{{ vich_uploader_asset(article, 'articlepdfFile') }}" type="application/pdf" width="100%" height="650"></object></div>
+                                                    </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </td>
+                                {% endif %}
+                                
+                                
                             </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
-
     </div>
 {% endblock %}
+
