--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -75,27 +75,30 @@
                                 {% else %}
                                     
                                     <td class="text-center">
-                                    <!-- Trigger the modal with a button -->
-                                    <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Fichier Pdf</button>
-                                    <!-- Modal -->
-                                    <div id="myModal" class="modal fade" role="dialog">
-                                        <div class="modal-dialog">
-                                            <!-- Modal content-->
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                                        <h4 class="modal-title">Fichier Pdf</h4>
+                                        <!-- Trigger the modal with a button -->
+                                        <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#{{ article.id }}">Fichier PDF</button>
+                                        <!-- Modal -->
+                                        <div id="{{ article.id }}" class="modal fade" role="dialog">
+                                            <div class="modal-dialog">
+                                                <!-- Modal content-->
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                            <h4 class="modal-title">Fichier PDF</h4>
+                                                        </div>
+                                                        <div class="modal-body">
+                                                            <div>
+                                                                <object data="{{ vich_uploader_asset(article, 'articlepdfFile') }}" type="application/pdf" width="100%" height="650">
+                                                                </object>
+                                                            </div>
+                                                        </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                     </div>
-                                                    <div class="modal-body">
-                                                        <div><object data="{{ vich_uploader_asset(article, 'articlepdfFile') }}" type="application/pdf" width="100%" height="650"></object></div>
-                                                    </div>
-                                                <div class="modal-footer">
-                                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </td>
+                                    </td>
                                 {% endif %}
                                 
                                 
