--- a/src/AppBundle/Resources/views/Rapport/rapport_page.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/rapport_page.html.twig
@@ -16,13 +16,49 @@
                                     <th class="text-center">Titre</th>
                                     <th class="text-center">Description</th>
                                     <th class="text-center">Photo</th>
+                                    <th class="text-center">Fichier pdf</th>
+
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td class="text-center">{{ article_page.title }}</td>
                                     <td class="text-center">{{ article_page.description }}</td>
-                                    <td class="text-center"><img class="img_cadre" src="{{ vich_uploader_asset(article_page, 'photoFile') }}" alt="photo_annonce"></td>
+                                    {% if article_page.photo is null %}
+                                        <td class="text-center">Aucune photos</td>
+                                    {% else %}
+                                        <td class="text-center"><img class="img_cadre" src="{{ vich_uploader_asset(article_page, 'photoFile') }}" alt="photo_article"></td>
+                                    {% endif %}
+
+                                    {% if article_page.articlepdf is null %}
+                                        <td class="text-center">Aucun fichier PDF</td>
+                                    {% else %}
+                                        <td class="text-center">
+                                            <!-- Trigger the modal with a button -->
+                                            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#{{ article_page.id }}">Fichier PDF</button>
+                                            <!-- Modal -->
+                                            <div id="{{ article_page.id }}" class="modal fade" role="dialog">
+                                                <div class="modal-dialog">
+                                                    <!-- Modal content-->
+                                                    <div class="modal-content">
+                                                        <div class="modal-header">
+                                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                                <h4 class="modal-title">Fichier PDF</h4>
+                                                            </div>
+                                                            <div class="modal-body">
+                                                                <div>
+                                                                    <object data="{{ vich_uploader_asset(article_page, 'articlepdfFile') }}" type="application/pdf" width="100%" height="650">
+                                                                    </object>
+                                                                </div>
+                                                            </div>
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </td>
+                                    {% endif %}
                                 </tr>
                             </tbody>
                         </table>
