--- a/src/AppBundle/Resources/views/Rapport/rapport_page.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/rapport_page.html.twig
@@ -6,7 +6,7 @@
     <div class="container">
 
         {% if article_page is defined %}
-            <h1 class="text-center">Recherche de "{{ article_page.title }}"</h1>
+            <h1 class="text-center">{{ article_page.title }}"</h1>
 
                 <div class="row">
                     <div class="col-xs-12">
