--- a/web/css/style.css
+++ b/web/css/style.css
@@ -4,6 +4,14 @@
     width: 250px;
 
 }
+
+.img_cadre_lg{
+
+    height: 300px;
+    width: 500px;
+
+}
+
 /* .toto{
     display: block;
     margin:0 auto 0 auto;
