--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -97,6 +97,72 @@
                 </table>
             </div>
         </div>
+
+{# new template #}
+
+        <div class="row">
+
+            {% for article in articles %}
+
+                <div class="col-md-12">
+                    <div class=" panel panel-danger">
+                        <div class="panel-heading">
+                            <h4 class="panel-title text-center"><a id="" class="" href="/page_article/{{ article.title }}">{{ article.title }}</a></h4>
+                        </div>
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="row sub_div_tab">
+                                        <div class="col-md-12 text-center">
+                                            {% if article.photo is null %}
+                                                <p class="text-center">Aucune photo</p>
+                                            {% else %}
+                                                <img class="img_cadre" src="{{ vich_uploader_asset(article, 'photoFile') }}" alt="photo_article">
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                    <div class="row sub_div_tab">
+                                        <div class="col-md-12 text-center">
+                                            {% if article.articlepdf is null %}
+                                                <p class="text-center">Aucun fichier PDF</p>
+                                            {% else %}
+                                                <!-- Trigger the modal with a button -->
+                                                <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#{{ article.id }}">Fichier PDF</button>
+                                                <!-- Modal -->
+                                                <div id="{{ article.id }}" class="modal fade" role="dialog">
+                                                    <div class="modal-dialog">
+                                                        <!-- Modal content-->
+                                                        <div class="modal-content">
+                                                            <div class="modal-header">
+                                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                                                    <h4 class="modal-title">Fichier PDF</h4>
+                                                                </div>
+                                                                <div class="modal-body">
+                                                                    <div>
+                                                                        <object data="{{ vich_uploader_asset(article, 'articlepdfFile') }}" type="application/pdf" width="100%" height="650">
+                                                                        </object>
+                                                                    </div>
+                                                                </div>
+                                                            <div class="modal-footer">
+                                                                <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-8 description">
+                                    <p class="text-justify">{{ article.description }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+
+        </div>
     </div>
 {% endblock %}
 
