--- a/src/AppBundle/Resources/views/Rapport/rapport_page.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/rapport_page.html.twig
@@ -25,12 +25,12 @@
 
                     <div class="photo_area">
                         {% if article_page.photo is null %}
-                            <p class="text-center">Aucune photos</p>
+                            <p class="text-center">Aucune photo</p>
                         {% else %}
-                            <img class="img_cadre" src="{{ vich_uploader_asset(article_page, 'photoFile') }}" alt="photo_article">
+                            <img class="img_cadre_page_seule" src="{{ vich_uploader_asset(article_page, 'photoFile') }}" alt="photo_article">
 
                             <!-- Trigger the modal with a button -->
-                            <button id="photo_data_target" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="">Apperçue image</button>
+                            <button id="photo_data_target" type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="">Aperçu image</button>
                             <!-- Modal -->
                             <div id="test_photo_target" class="modal fade" role="dialog">
                                 <div class="modal-dialog">
@@ -38,7 +38,7 @@
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                            <h4 class="modal-title">Apperçue image de l'article {{ article_page.title }}</h4>
+                                            <h4 class="modal-title">Aperçu image de l'article {{ article_page.title }}</h4>
                                         </div>
                                         <div class="modal-body">
                                             <div>
@@ -46,12 +46,11 @@
                                             </div>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-
                         {% endif %}
                     </div>
 
@@ -78,23 +77,22 @@
                                             </div>
                                         </div>
                                         <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                            <button type="button" class="btn btn-danger" data-dismiss="modal">Fermer</button>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         {% endif %}
                     </div>
-
                 </div>
-
             </div>
         </div>
 
         {% endif %}
-
+        <div class="btn-return">
             <form>
-                <button class="btn btn-info" type="button" onclick="history.go(-1)">Revenir</button>
+                <button class="btn btn-warning" type="button" onclick="history.go(-1)">Revenir</button>
             </form>
+        </div>
     </div>
 {% endblock %}
