--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,34 @@
+body .container, .nav, .navbar, .navbar-inverse{
+
+    background:
+        linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+        linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+        linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+        linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+        linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+        linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+    background-color: #131313;
+    background-size: 20px 20px;
+    border-radius: 15px;
+    color: white;
+    
+}
+
+.panel{
+
+    color: #111;
+
+}
+
+.img_index{
+
+    height: 150px;
+    width: auto;
+    float: left;
+    margin: 15px;
+
+}
+
 .img_cadre{
 
     height: 150px;
@@ -49,8 +80,8 @@
 
 .zone_annexe{
 
-    border-left: 2px solid #111;
-    border-bottom: 2px solid #111;
+    border-left: 2px solid rgba(253, 144, 19, 1);;
+    border-bottom: 2px solid rgba(253, 144, 19, 1);;
     padding-top: 15px;
     margin-left: -15px;
 
@@ -58,7 +89,7 @@
 
 h3{
 
-    background-color: rgba(253, 144, 19, 0.521);
+    background-color: rgba(253, 144, 19, 1);
     border-radius: 25px;
 
 }
@@ -96,7 +127,7 @@ p{
 
 blockquote{
     
-    border-color:  rgba(253, 144, 19, 0.5);
+    border-color:  rgba(253, 144, 19, 1);
     
 }
 
