--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -21,7 +21,7 @@
                                                                                     }} ) }}
 
                                             <span class="input-group-btn">
-                                                <button class="btn btn-info btn-md" type="submit">
+                                                <button class="btn btn-warning btn-md" type="submit">
                                                     <i class="glyphicon glyphicon-search"> Rechercher</i>
                                                 </button>
                                             </span>
@@ -42,7 +42,7 @@
             {% for article in articles %}
 
                 <div class="col-md-12">
-                    <div class=" panel panel-danger">
+                    <div class=" panel panel-warning">
                         <div class="panel-heading">
                             <h4 class="panel-title text-center"><a id="" class="" href="/page_article/{{ article.title }}">
                             <span class="glyphicon glyphicon-hand-right" aria-hidden="true"></span> {{ article.title }}</a></h4>
