--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -127,6 +127,9 @@
                     </div>
                 </div>
             {% endfor %}
+            <div class="text-center">
+                {{ knp_pagination_render(articles) }}
+            </div>
         </div>
     </div>
 
