--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -39,6 +39,10 @@
 
         <div class="row">
 
+            <div class="text-center">
+                {{ knp_pagination_render(articles) }}
+            </div>
+
             {% for article in articles %}
 
                 <div class="col-md-12">
