--- a/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
+++ b/src/AppBundle/Resources/views/Rapport/afficher_rap.html.twig
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-12">
                 <h1 class="text-center">Rapport quotidien</h1>
-                    {{ form_start(form) }}
+                    {{ form_start(form, {'action': path('app_rapport_afficherrap')} ) }}
 
                         <div class="row">
                             <div class="col-md-6">
